--- a/package.json
+++ b/package.json
@@ -2,20 +2,23 @@
     "name": "ws_task",
     "version": "1.0.0",
     "description": "Template for the WebSocket remote control task",
-    "main": "index.js",
-    "type": "module",
+    "main": "index.ts",
+    "type": "commonjs",
     "scripts": {
-        "start": "node ./index.js",
-        "start:dev": "nodemon ./index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "tsc && node dist/index.js",
+        "start:dev": "nodemon index.ts"
     },
-    "author": "Andrei Auchynnikau",
+    "author": "Varvara Deviaterikova <hallovarvara@gmail.com>",
     "keywords": [],
     "license": "ISC",
     "devDependencies": {
-        "nodemon": "^2.0.16"
+        "@types/ws": "^8.5.5",
+        "nodemon": "^2.0.16",
+        "prettier": "^3.0.0",
+        "ts-node": "^10.9.1"
     },
     "dependencies": {
+        "dotenv": "^16.3.1",
         "ws": "^8.8.0"
     }
 }
